Filled in the fun run pages!

--- a/app/templates/funruntempl.html
+++ b/app/templates/funruntempl.html
@@ -11,7 +11,9 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-responsive.css') }}">
 <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.lightbox-0.5.css') }}">
- --><link rel="stylesheet" href="{{ url_for('static', filename='css/custom-styles.css') }}">
+ -->
+ <link rel="stylesheet" href="{{ url_for('static', filename='css/flexslider.css') }}" />
+ <link rel="stylesheet" href="{{ url_for('static', filename='css/custom-styles.css') }}">
 
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,34 +33,67 @@
 <script src="{{ url_for('static', filename='angular/angular.js') }}"></script>
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script> 
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
+<script src="{{ url_for('static', filename='js/jquery.flexslider.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.custom.js') }}"></script>
 <script>
-  var myApp = angular.module('myApp', [], function($interpolateProvider) {
+  var myApp = angular.module('FunRunModule', [], function($interpolateProvider) {
       $interpolateProvider.startSymbol('[[');
       $interpolateProvider.endSymbol(']]');
   });
 
-  myApp.controller('MyCtrl', function($scope, $http) {
-    $http.get("http://104.239.139.43:8000/api/funruns").success(function(data) {
-      $scope.funlist = data.funruns;
-      console.log(data.funruns);
+  myApp.controller('FunRunGetter', function($scope, $http) {
+    $http.get("http://104.239.139.43:8000/api/funruns/" + {{runID}}).success(function(data) {
+      $scope.run = data.funruns;
+      console.log($scope.run);
     });
   });
   </script>
+
+<script type="text/javascript">
+$(document).ready(function () {
+
+    $("#btn-blog-next").click(function () {
+      $('#blogCarousel').carousel('next')
+    });
+     $("#btn-blog-prev").click(function () {
+      $('#blogCarousel').carousel('prev')
+    });
+
+     $("#btn-client-next").click(function () {
+      $('#clientCarousel').carousel('next')
+    });
+     $("#btn-client-prev").click(function () {
+      $('#clientCarousel').carousel('prev')
+    });
+    
+});
+
+ $(window).load(function(){
+
+    $('.flexslider').flexslider({
+        animation: "slide",
+        slideshow: true,
+        start: function(slider){
+          $('body').removeClass('loading');
+        }
+    });  
+});
+
+</script>
 </head>
 
 
-<div ng-app="myApp">
-  <div ng-controller="MyCtrl">
+<!-- <div ng-app="FunRunModule">
+  <div ng-controller="FunRunGetter">
         <ul ng-repeat="run in funlist">
        <li>The ID is [[run.id]]</li>
        <li>The Name is [[run.name]]</li>
       </ul>
   </div>
-</div>
+</div> -->
 
 
-<body>
+<body ng-app="FunRunModule" ng-controller="FunRunGetter">
   <div class="color-bar-1"></div>
     <div class="color-bar-2 color-bg"></div>
     
@@ -69,8 +104,8 @@
         <!-- Logo
         ================================================== -->
         <div class="span5 logo">
-          <a href="index.htm"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}" alt="" /></a>
-            <h5>Big Things... Small Packages</h5>
+          <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}" alt="" /></a>
+            <h5>Fun Run Event: [[run.name]]</h5>
         </div>
         
         <!-- Main Navigation
@@ -116,119 +151,58 @@
     <!-- Title Header -->
         <div class="span8"><!--Begin page content column-->
 
-            <h2>Right Sidebar Example</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie.</p>
+            <h2>[[run.name]] &nbsp&nbsp | &nbsp&nbsp [[run.city]]</h2>
+            <p class="lead">[[run.description]]</p>
 
-            <h5 class="title-bg"> This is a sub head divider</h5>
-
-            <div class="row">
-                <div class="span2">
-                    <img src="img/gallery/gallery-img-1-6col.jpg" alt="Image" class="thumbnail">
-                    <h5>4 Column Layout</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
-                    <button class="btn btn-mini btn-inverse" type="button">Read more</button>
-                </div>
-                <div class="span2">
-                    <img src="img/gallery/gallery-img-1-6col.jpg" alt="Image" class="thumbnail">
-                    <h5>4 Column Layout</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
-                    <button class="btn btn-mini btn-inverse" type="button">Read more</button>
-                </div>
-                <div class="span2">
-                    <img src="img/gallery/gallery-img-13-6col.jpg" alt="Image" class="thumbnail">
-                    <h5>4 Column Layout</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
-                    <button class="btn btn-mini btn-inverse" type="button">Read more</button>
-                </div>
-                <div class="span2">
-                    <img src="img/gallery/gallery-img-14-6col.jpg" alt="Image" class="thumbnail">
-                    <h5>4 Column Layout</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
-                    <button class="btn btn-mini btn-inverse" type="button">Read more</button>
-                </div>
+        <!-- Slider Carousel
+        ================================================== -->
+        <h3 class="title-bg">Photos Of The Fun!</h3>
+          <div class="flexslider">
+              <ul class="slides">
+                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
+                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
+                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
+                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
+                <li><a href="gallery-single.htm"><img src="{{ url_for('static', filename='img/gallery/AbbyArt.jpg') }}" alt="slider" /></a></li>
+              </ul>
             </div>
 
-            <h3 class="title-bg"> This is a sub head divider</h3>
-
-            <div class="clearfix">
-                <img src="img/gallery/gallery-img-1-4col.jpg" class="thumbnail align-left" alt="Image" />
-                <p>Vivamus augue nulla, vestibulum ac ultrices posuere, vehicula ac arcu. Quisque nisi lacus, bibendum quis commodo eget, lobortis eget elit. Cras venenatis mauris eu tortor consequat a convallis nulla molestie. Phasellus malesuada malesuada velit et fermentum. Proin ut leo nec mauris pulvinar volutpat. Sed ac neque nec leo condimentum rhoncus.</p>
-                <p>Quisque nisi lacus, bibendum quis commodo eget, lobortis eget elit. Cras venenatis mauris eu tortor consequat a convallis nulla molestie.</p>
-                <button class="btn btn-small btn-inverse" type="button">Visit Website</button>
-            </div>
-
-            <div class="alert alert-info">
-                <button type="button" class="close" data-dismiss="alert">×</button>
-                <strong>Heads up!</strong> This alert is not super important. 
-            </div>  
-
-            <p>Vivamus augue nulla, vestibulum ac ultrices posuere, vehicula ac arcu. Quisque nisi lacus, bibendum quis commodo eget, lobortis eget elit. Cras venenatis mauris eu tortor consequat a convallis nulla molestie. Phasellus malesuada malesuada velit et fermentum. Proin ut leo nec mauris pulvinar volutpat. Sed ac neque nec leo condimentum rhoncus. Quisque nisi lacus, bibendum quis commodo eget, lobortis eget elit. Cras venenatis mauris eu tortor consequat a convallis nulla molestie.</p>
-
+            <br />
         </div> <!--End page content column-->
 
         <!-- Blog Sidebar
         ================================================== --> 
         <div class="span4 sidebar page-sidebar"><!-- Begin sidebar column -->
 
+            <!--Address-->
+            <h5 class="title-bg">Address</h5>
+    
+            <p class="quote-text side">[[run.address]]</p>
+
             <!--Tabbed Content-->
-            <h5 class="title-bg">More Info</h5>
+            <h5 class="title-bg">Involved Parties</h5>
             <ul class="nav nav-tabs">
-                <li class="active"><a href="#comments" data-toggle="tab">Comments</a></li>
-                <li><a href="#tweets" data-toggle="tab">Tweets</a></li>
-                <li><a href="#about" data-toggle="tab">About</a></li>
+                <li class="active"><a href="#hosts" data-toggle="tab">Hosts</a></li>
+                <li><a href="#sponsors" data-toggle="tab">Sponsors</a></li>
+                <li><a href="#charities" data-toggle="tab">Charities</a></li>
             </ul>
 
             <div class="tab-content">
-                <div class="tab-pane active" id="comments">
-                     <ul>
-                        <li><i class="icon-comment"></i>admin on <a href="#">Lorem ipsum dolor sit amet</a></li>
-                        <li><i class="icon-comment"></i>admin on <a href="#">Consectetur adipiscing elit</a></li>
-                        <li><i class="icon-comment"></i>admin on <a href="#">Ipsum dolor sit amet consectetur</a></li>
-                        <li><i class="icon-comment"></i>admin on <a href="#">Aadipiscing elit varius elementum</a></li>
-                        <li><i class="icon-comment"></i>admin on <a href="#">ulla iaculis mattis lorem</a></li>
-                    </ul>
+                <div class="tab-pane active" id="hosts">
+                    <p> [[run.hosts]]</p>
                 </div>
-                <div class="tab-pane" id="tweets">
-                    <ul>
-                        <li><a href="#"><i class="icon-share-alt"></i>@room122</a> Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna.</li>
-                        <li><a href="#"> <i class="icon-share-alt"></i>@room122</a> Nulla faucibus ligula eget ante varius ac euismod odio placerat.</li>
-                        <li><a href="#"> <i class="icon-share-alt"></i>@room122</a> Pellentesque iaculis lacinia leo. Donec suscipit, lectus et hendrerit posuere, dui nisi porta risus, eget adipiscing</li>
-                        <li><a href="#"> <i class="icon-share-alt"></i>@room122</a> Vivamus augue nulla, vestibulum ac ultrices posuere, vehicula ac arcu.</li>
-                        <li><a href="#"> <i class="icon-share-alt"></i>@room122</a> Sed ac neque nec leo condimentum rhoncus. Nunc dapibus odio et lacus.</li>
-                    </ul>
+                <div class="tab-pane" id="sponsors">
+                    <p> [[run.sponsors]]</p>
                 </div>
-                <div class="tab-pane" id="about">
-                    <p>Enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo.</p>
-
-                    Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                <div class="tab-pane" id="charities">
+                    <p> [[run.charities]]</p>
                 </div>
             </div>
 
-            <!--Testimonials-->
-            <h5 class="title-bg">Testimonials</h5>
+            <!--Prices-->
+            <h5 class="title-bg">Prices</h5>
     
-            <p class="quote-text side">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Morbi blandit ultricies ultrices. Vivamus nec lectus sed orci molestie molestie."<cite>- Client Name, Big Company</cite></p>
-        
-            <p class="quote-text side">"Adipiscing elit. In interdum felis fermentum ipsum molestie sed porttitor ligula rutrum. Morbi blandit ultricies ultrices. Vivamus nec lectus sed orci molestie molestie."<cite>- Another Client Name, Big Company</cite></p>
-
-            <!--Latest News-->
-            <h5 class="title-bg">Latest News</h5>
-            <ul class="popular-posts">
-                <li>
-                    <a href="#"><img src="img/gallery/gallery-img-2-thumb.jpg" alt="Popular Post"></a>
-                    <h6><a href="#">Lorem ipsum dolor sit amet consectetur adipiscing elit</a></h6>
-                    <em>Posted on 09/01/15</em>
-                </li>
-                <li>
-                    <a href="#"><img src="img/gallery/gallery-img-2-thumb.jpg" alt="Popular Post"></a>
-                    <h6><a href="#">Nulla iaculis mattis lorem, quis gravida nunc iaculis</a></h6>
-                    <em>Posted on 09/01/15</em>
-                <li>
-                    <a href="#"><img src="img/gallery/gallery-img-2-thumb.jpg" alt="Popular Post"></a>
-                    <h6><a href="#">Vivamus tincidunt sem eu magna varius elementum maecenas felis</a></h6>
-                    <em>Posted on 09/01/15</em>
-                </li>
-            </ul>
+            <pre class="quote-text side">[[run.price]]</pre>
 
         </div><!-- End sidebar column -->
 
