alyssa funny modifications

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -103,69 +103,41 @@
     <!-- Title Header -->
     <div class="row">
         <div class="span12">
-            <h2>Full Width Page</h2>
-            <p class="lead">When you need all the room you can get. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie.</p>
-
-            <!-- Carousel
-            ================================================== -->
-            <div class="row">
-                <div class="span6">
-                    <div class="flexslider">
-                      <ul class="slides">
-                        <li><a href="gallery-single.htm"><img src="img/gallery/slider-img-1.jpg" alt="slider" /></a></li>
-                        <li><a href="gallery-single.htm"><img src="img/gallery/slider-img-1.jpg" alt="slider" /></a></li>
-                        <li><a href="gallery-single.htm"><img src="img/gallery/slider-img-1.jpg" alt="slider" /></a></li>
-                        <li><a href="gallery-single.htm"><img src="img/gallery/slider-img-1.jpg" alt="slider" /></a></li>
-                        <li><a href="gallery-single.htm"><img src="img/gallery/slider-img-1.jpg" alt="slider" /></a></li>
-                      </ul>
-                    </div>
-                </div>
-
-                <div class="span6">
-                    <h5>Lorem ipsum dolor sit amet</h5>
-                    <p>Vivamus augue nulla, vestibulum ac ultrices posuere, vehicula ac arcu. Quisque nisi lacus, bibendum quis commodo eget, lobortis eget elit. Cras venenatis mauris eu tortor consequat a convallis nulla molestie. Phasellus malesuada malesuada velit et fermentum. Proin ut leo nec mauris pulvinar volutpat. Sed ac neque nec leo condimentum rhoncus. Nunc dapibus odio et lacus elementum congue. Praesent nulla arcu, condimentum eu lobortis sit amet, pretium vitae metus. </p>
-
-                    <blockquote>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante. Praesent nulla arcu, condimentum eu lobortis.</p>
-                        <small>Someone famous <cite title="Source Title">Source Title</cite></small>
-                    </blockquote>
-
-                    <button class="btn btn-small btn-inverse" type="button">Find out more</button>
-                </div>
-
-            </div>
+            <h2>The Austin Isms</h2>
+            <p class="lead">A group of students from the University of Texas, Austin, conquering the world, one Software Engineering Project at a time.<br/>
+                <blockquote>Yes - I have already put in my Presidential bid</blockquote> <cite> -Kurt Bixby</cite></p>
 
             <h3 class="title-bg"> Meet our team!</h3>
             <div class="row">
                 <div class="span4">
-                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     <h5>Alyssa Williams</h5>
-                    <p>Stuff about Alyssa.</p>
+                    <p>RAWR</p>
                 </div>
                 <div class="span4">
                     <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     <h5>Kurt Bixby</h5>
-                    <p>Stuff about Kurt.</p>
+                    <p>Sassy McKurteous Bixbeous</p>
                 </div>
                 <div class="span4">
                     <img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="image">
                     <h5>Kevin Byers</h5>
-                    <p>Stuff about Kevin.</p>
+                    <p>Kevin Hello-ers</p>
                 </div>
             </div>
             <div class="row">
                 <div class="span4">
                     <img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="image">
                     <h5>David Aguirre</h5>
-                    <p>Stuff about David.</p>
+                    <p>He doesn't actually know how to drive that</p>
                 </div>
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     <h5>Edgar Treto</h5>
                     <p>Stuff about Edgar.</p>
                 </div>
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/Hector.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     <h5>Hector Garcia</h5>
                     <p>Stuff about Hector.</p>
                 </div>
