Fixed up about page and headers. Changed the css a little.

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Piccolo Theme</title>
+<title>Fun Runs 2015: About</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- CSS
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-	<div class="color-bar-1"></div>
+    <div class="color-bar-1"></div>
     <div class="color-bar-2 color-bg"></div>
     
     <div class="container main-container">
@@ -57,8 +57,8 @@
         <!-- Logo
         ================================================== -->
         <div class="span5 logo">
-          <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a>
-            <h5>Fun Run Events</h5>
+<!--           <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
+            <h1>Fun Runs 2015: About</h1>
         </div>
         
         <!-- Main Navigation
@@ -103,41 +103,56 @@
     <!-- Title Header -->
     <div class="row">
         <div class="span12">
-            <h2>The Austin Isms</h2>
+            <h2>_(┐「ε:)_</h2>
             <p class="lead">A group of students from the University of Texas, Austin, conquering the world, one Software Engineering Project at a time.<br/>
                 <blockquote>Yes - I have already put in my Presidential bid</blockquote> <cite> -Kurt Bixby</cite></p>
 
-            <h3 class="title-bg"> Meet our team!</h3>
+            <h3 class="title-bg"> _(┐「ε:)_ &nbsp Meet our team! &nbsp _(┐「ε:)_</h3>
             <div class="row">
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                    <div class="resize">
+                        <img src="{{ url_for('static', filename='img/teamMemberPics/Alyssa.jpg') }}" alt="image">
+                    </div>
                     <h5>Alyssa Williams</h5>
-                    <p>RAWR</p>
+                    <p>
+                        <i class="icon-calendar"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                        <i class="icon-heart"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                    </p>
                 </div>
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                    <div class="resize">
+                        <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                    </div>
                     <h5>Kurt Bixby</h5>
                     <p>Sassy McKurteous Bixbeous</p>
                 </div>
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="image">
+                    <div class="resize">
+                        <img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="image">
+                    </div>
                     <h5>Kevin Byers</h5>
                     <p>Kevin Hello-ers</p>
                 </div>
             </div>
             <div class="row">
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="image">
+                    <div class="resize">
+                        <img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="image">
+                    </div>
                     <h5>David Aguirre</h5>
                     <p>He doesn't actually know how to drive that</p>
                 </div>
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                    <div class="resize">
+                        <img src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="image">
+                    </div>
                     <h5>Edgar Treto</h5>
-                    <p>Stuff about Edgar.</p>
+                    <p>_(┐「ε:)_</p>
                 </div>
                 <div class="span4">
-                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                    <div class="resize">
+                        <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                    </div>
                     <h5>Hector Garcia</h5>
                     <p>Stuff about Hector.</p>
                 </div>
@@ -151,7 +166,7 @@
     <!-- Footer Area
         ================================================== -->
 
-	<div class="footer-container"><!-- Begin Footer -->
+    <div class="footer-container"><!-- Begin Footer -->
       <div class="container">
           <div class="row footer-row">
                 <div class="span3 footer-col">
