--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Fun Runs 2015</title>
+<title>Fun Runs 2015: Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <!-- CSS
@@ -82,8 +82,8 @@ $(document).ready(function () {
       <!-- Logo
       ================================================== -->
       <div class="span5 logo">
-        <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a>
-          <h5><-- Need to replace</h5>
+<!--         <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
+          <h1>Fun Runs 2015: Home</h1>
       </div>
       
       <!-- Main Navigation
