--- a/app/static/css/custom-styles.css
+++ b/app/static/css/custom-styles.css
@@ -1,3 +1,14 @@
+/******* Added by Alyssa *******/
+
+.resize {
+	overflow: hidden;
+}
+
+.resize img {
+	width: 100%;
+}
+/*******************************/
+
 html, body {
 	font-size:12px; 
 	line-height:18px;
