--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -60,8 +60,8 @@
         <!-- Logo
         ================================================== -->
         <div class="span5 logo">
-          <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a>
-            <h5>Fun Run Events</h5>
+          <!-- <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
+            <h1>Fun Runs 2015: Events</h1>
         </div>
         
         <!-- Main Navigation
@@ -118,10 +118,6 @@
 
             <div class="row clearfix">
                 <ul class="gallery-post-grid holder">
-                    <div for-each="run in funruns">
-                        [[run.name]]
-                    </div>
-
                     <!-- Gallery Item 1 -->
                     <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
                       <a href="/funruns/0">
