--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Fun Runs 2015: Fun Runs</title>
+<title>Fun Runs 2015: Locations</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- CSS
@@ -48,8 +48,8 @@
         <!-- Logo
         ================================================== -->
         <div class="span5 logo">
-          <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a>
-            <h5>Fun Run Locations</h5>
+          <!-- <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a> -->
+            <h1>Fun Runs 2015: Locations</h1>
         </div>
         
         <!-- Main Navigation
