--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -154,7 +154,12 @@
         </div><!-- End gallery list-->
 
     </div><!-- End container row -->
-    
+
+    <div class="row">
+        <div class="span4">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3445.3211423142952!2d-97.7340784576721!3d30.284918000000008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b59b2584cfb7%3A0x8131ee4f174a21de!2sThe+University+of+Texas+at+Austin!5e0!3m2!1sen!2sus!4v1427160183612" width="400" height="300" frameborder="0" style="border:0"></iframe>
+        </div>
+    </div>
     </div> <!-- End Container -->
 
   <!-- Footer Area
