Put the template for descriptions

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -105,7 +105,7 @@
         <div class="span12">
             <h2>_(┐「ε:)_</h2>
             <p class="lead">A group of students from the University of Texas, Austin, conquering the world, one Software Engineering Project at a time.<br/>
-                <blockquote>Yes - I have already put in my Presidential bid</blockquote> <cite> -Kurt Bixby</cite></p>
+                <blockquote>"That's dumb."</blockquote> <cite> -Kurt Bixby</cite></p>
 
             <h3 class="title-bg"> _(┐「ε:)_ &nbsp Meet our team! &nbsp _(┐「ε:)_</h3>
             <div class="row">
@@ -115,8 +115,14 @@
                     </div>
                     <h5>Alyssa Williams</h5>
                     <p>
-                        <i class="icon-calendar"></i><strong>Birthday:</strong> April 27, 1993<br/>
-                        <i class="icon-heart"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
                     </p>
                 </div>
                 <div class="span4">
@@ -124,14 +130,32 @@
                         <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     </div>
                     <h5>Kurt Bixby</h5>
-                    <p>Sassy McKurteous Bixbeous</p>
+                    <p>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                    </p>
                 </div>
                 <div class="span4">
                     <div class="resize">
                         <img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="image">
                     </div>
                     <h5>Kevin Byers</h5>
-                    <p>Kevin Hello-ers</p>
+                    <p>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                    </p>
                 </div>
             </div>
             <div class="row">
@@ -140,7 +164,16 @@
                         <img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="image">
                     </div>
                     <h5>David Aguirre</h5>
-                    <p>He doesn't actually know how to drive that</p>
+                    <p>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                    </p>
                 </div>
                 <div class="span4">
                     <div class="resize">
@@ -154,7 +187,16 @@
                         <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     </div>
                     <h5>Hector Garcia</h5>
-                    <p>Stuff about Hector.</p>
+                    <p>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                    </p>
                 </div>
             </div>
 
