updated Kevins about profile

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -147,14 +147,14 @@
                     </div>
                     <h5>Kevin Byers</h5>
                     <p>
-                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-user"></i><strong>Seelio:</strong> <a href="http://seelio.com/kevinbyers"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> kevin.byers.tennis@gmail.com</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
-                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
-                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
-                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
-                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
-                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> June 25, 1991<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Alternative<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Dogs, Cats, Friends, Gaming, Grandma, Movies, TV, Board Games<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Two things are infinite: the universe and human stupidity; and I'm not sure about the universe."  -Albert Einstein<br/>
                     </p>
                 </div>
             </div>
