--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -153,7 +153,7 @@
                         <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
                         <i class="icon-gift"></i><strong>Birthday:</strong> June 25, 1991<br/>
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Alternative<br/>
-                        <i class="icon-heart"></i><strong>Loves:</strong> Dogs, Cats, Friends, Gaming, Grandma, Movies, TV, Board Games<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Dogs, Cats, Friends, Family, Gaming, Movies, TV, Board Games<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Two things are infinite: the universe and human stupidity; and I'm not sure about the universe."  -Albert Einstein<br/>
                     </p>
                 </div>
