updated map and added it to funruns page also

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -165,6 +165,12 @@
         </div><!-- End gallery list-->
 
     </div><!-- End container row -->
+
+    <div class="row">
+        <div class="span4">
+          <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" width="640" height="480"></iframe>
+        </div>
+    </div>
     
     </div> <!-- End Container -->
 
